fix spacing after icons when minified

--- a/static/less/sections.less
+++ b/static/less/sections.less
@@ -170,7 +170,6 @@ section header {
 			
 			.sideBoxContent {
 				padding:0.25rem;
-				display:block;
 				
 				ul, ol {
 					margin:0;
